--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<h4>My favorite color is Green.</h4>
 					<h4>My favorite food is Mexican.</h4>
 					<h4>If I could be any animal, I would be A Goat.</h4>
-                    <p>Meow! Meow! Meow!</p>
+                    <p>Goat Sounds!!!</p>
 			</div>
 		  </body>
 		</html>
