--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
-		<html>
-		  <head>
-			<meta charset="utf-8">
-			<meta name="viewport" content="width=device-width">
-			<title>My Profile</title>
-		  </head>
-		  <body>
-			<div align="center">
-				<h1>Hector Hernandez</h1>
-				<h2>Software Developer</h2>
-				<hr>
-				<h3>About Me:</h3> 
-					<h4>My hometown is Las Vegas.</h4>
-					<h4>My favorite color is Green.</h4>
-					<h4>My favorite food is Mexican.</h4>
-					<h4>If I could be any animal, I would be A Goat.</h4>
-                    <p>Goat Sounds!!!</p>
-			</div>
-		  </body>
-		</html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>My Website</title>
+</head>
+<body>
+	
+</body>
+</html>
